
[TestGenerate/basic_generation_tests/with_file - 1]
apiVersion: eksctl.io/v1alpha5
kind: ClusterConfig
metadata:
  name: file-cluster
  region: eu-north-1

---

[TestGenerate/basic_generation_tests/with_force_overwrite - 1]
apiVersion: eksctl.io/v1alpha5
kind: ClusterConfig
metadata:
  name: force-cluster
  region: eu-north-1

---

[TestGenerate/basic_generation_tests/without_file - 1]
apiVersion: eksctl.io/v1alpha5
kind: ClusterConfig
metadata:
  name: test-cluster
  region: eu-north-1

---
